--- a/css/main.css
+++ b/css/main.css
@@ -7,33 +7,33 @@ body
 #wrapper
 {
 	margin: 10px auto;
-	width: 320px;
-	height: 600px;
+	width: 400px;
+	height: 350px;
 	overflow: hidden;
-	position: relative;
-	border: 3px solid rgb(150, 150, 150);
-	border-radius: 5px;
-	transition: .25s height linear;
+	border: 3px solid black;
 }
 
 #logo
 {
-	width: 320px;
+	margin: 10px auto;
+	width: 200px;
 }
 
 #logobilde
 {
-	margin: 0 60px;
 	width: 200px;
 }
 
 h1
 {
 	text-align: center;
-	font-family: sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-form
+#form
 {
-	text-align: center;
+	height: 300px;
+	width: 500px;
+	position: relative;
+	right: 50px;
 }
