--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,27 @@ th, td
 	top: 10px;
 	left: 150px;
 }
+
+#navcontainer ul
+{
+margin: 0;
+padding: 0;
+list-style-type: none;
+text-align: center;
+}
+
+#navcontainer ul li { display: inline; }
+
+#navcontainer ul li a
+{
+text-decoration: none;
+padding: .1em;
+color: white;
+background-color: red;
+}
+
+#navcontainer ul li a:hover
+{
+color: #fff;
+background-color: #369;
+}
