--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body
 {
 	margin: 0;
-	background-color: rgb(255, 255, 255);
+	background-color: #FDFDF8;
 }
 
 @-webkit-viewport {
@@ -15,11 +15,11 @@ body
 {
     position: relative;
 	margin: auto;
-	height: 500px;
+	height: 400px;
     overflow: hidden;
 	border: 3px solid black;
 	padding: 5px;
-    width: 450px;
+    width: 400px;
 }
 
 #logo
@@ -30,6 +30,7 @@ body
 
 #logobilde
 {
+    position: relative;
 	width: 200px;
 }
 
@@ -68,7 +69,7 @@ th, td
 .pure-control-group {
     position: absolute;
     height: 64px;
-    top: 20px;
+    top: 80px;
     left: 120px;
 }
 
@@ -76,28 +77,28 @@ th, td
     position: absolute;
     height: 72px;
     width: 281px;
-    top: 100px;
-    left: 120px;
+    top: 20px;
+    left: 80px;
 }
 
 .pure-control-group2 {
     position: absolute;
     height: 72px;
     width: 300px;
-    top: 250px;
-    left: 150px;
+    top: 160px;
+    left: 120px;
 }
 .pure-checkbox {
     position: absolute;
     height: 36px;
     width: 500px;
-    top: 300px;
-    left: 170px;
+    top: 220px;
+    left: 150px;
 }
 .pure-button-primary {
     position: absolute;
-    top: 360px;
-    left: 200px;
+    top: 260px;
+    left: 180px;
 }
 
 
