--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body
 {
 	margin: 0;
 	background-color: #FDFDF8;
+    font-family: Founders Grotesk;
 }
 
 @-webkit-viewport {
@@ -16,7 +17,7 @@ body
     position: relative;
 	margin: auto;
 	height: 400px;
-    overflow: hidden;
+
 	border: 3px solid black;
 	padding: 5px;
     width: 400px;
@@ -37,7 +38,6 @@ body
 h1
 {
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
 }
 
 #form
@@ -130,4 +130,7 @@ background-color: red;
 color: #fff;
 background-color: #369;
 }
->>>>>>> origin/master
+
+
+
+
