--- a/css/main.css
+++ b/css/main.css
@@ -108,28 +108,11 @@ th, td
 	left: 150px;
 }
 
-#navcontainer ul
+#timeList li
 {
-margin: 0;
-padding: 0;
-list-style-type: none;
-text-align: center;
-}
-
-#navcontainer ul li { display: inline; }
-
-#navcontainer ul li a
-{
-text-decoration: none;
-padding: .1em;
-color: white;
-background-color: red;
-}
-
-#navcontainer ul li a:hover
-{
-color: #fff;
-background-color: #369;
+    display: inline;
+    list-style-type: none;
+    padding-right: 20px;
 }
 
 
