--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,21 @@ body
     font-family: Founders Grotesk;
 }
 
+/*
 @-webkit-viewport {
     zoom: 1.0;
     width: extend-to-zoom;
     min-height: 200px;
     min-width: 200px;
 }
+*/
 
 #wrapper
 {
     position: relative;
 	margin: auto;
 	height: 400px;
-
+    overflow: hidden;
 	border: 3px solid black;
 	padding: 5px;
     width: 400px;
